Prevent tab wraparound on oddly-shaped windows

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -402,7 +402,7 @@ html.no-js #stats-loading-message {
   font-size: 3.5vmin;
 
   ul.ui-tabs-nav {
-    font-size: 2.5vmin;
+    font-size: 2.25vmin;
 
     a, a:link, a:visited {
       color: #666;
